Convert URL to URI
URL constructors are deprecated in Java 20.